WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82691
[BlackBerry] Headers with no content shouldn't be dropped by platform's request.
https://bugs.webkit.org/show_bug.cgi?id=82691
Summary
[BlackBerry] Headers with no content shouldn't be dropped by platform's request.
Jason Liu
Reported
2012-03-29 22:53:28 PDT
We should send/receive empty headers as all the other browsers.
Attachments
Patch
(1.93 KB, patch)
2012-03-29 23:15 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jason Liu
Comment 1
2012-03-29 23:15:10 PDT
Created
attachment 134727
[details]
Patch
Joe Mason
Comment 2
2012-03-30 10:41:25 PDT
LGTM
Rob Buis
Comment 3
2012-03-30 18:45:36 PDT
Comment on
attachment 134727
[details]
Patch Ok.
Jason Liu
Comment 4
2012-03-30 18:52:54 PDT
(In reply to
comment #3
)
> (From update of
attachment 134727
[details]
) > Ok.
Thanks a lot.
WebKit Review Bot
Comment 5
2012-03-30 19:36:51 PDT
Comment on
attachment 134727
[details]
Patch Clearing flags on attachment: 134727 Committed
r112764
: <
http://trac.webkit.org/changeset/112764
>
WebKit Review Bot
Comment 6
2012-03-30 19:36:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug