[BlackBerry] Headers with no content shouldn't be dropped by platform's request. https://bugs.webkit.org/show_bug.cgi?id=82691

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-03-30
Reviewed by Rob Buis.

Test : http/tests/xmlhttprequest/xmlhttprequest-setrequestheader-no-value.html

* platform/network/blackberry/ResourceRequestBlackBerry.cpp:
(WebCore::ResourceRequest::initializePlatformRequest):

Canonical link: https://commits.webkit.org/100140@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112764 268f45cc-cd09-0410-ab3c-d52691b4dbfc